# NdkDemo

./: settings.gradle
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt  logger.h  native-lib.cpp
app/src/main/cpp/include/: get.h
app/src/main/java/com/example/ndkdemo/: MainActivity.kt  User.kt
gradle/wrapper/: gradle-wrapper.properties
